# sacp-cbor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: validate.rs
benchmarks/: Cargo.toml  README.md  fast_bench_summary.csv  summary.md
benchmarks/crates/bench_harness/: Cargo.toml
benchmarks/crates/bench_harness/benches/: bench.rs
benchmarks/crates/bench_harness/src/: adapters.rs  datasets.rs  lib.rs  minicbor_impl.rs  query_edit.rs  value.rs
benchmarks/datasets/: README.md
benchmarks/scripts/: fetch_datasets.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: query_only.rs  validate_only.rs  validate_roundtrip.rs
sacp-cbor-derive/: Cargo.toml
sacp-cbor-derive/src/: attrs.rs  cbor_bytes.rs  decode.rs  encode.rs  lib.rs  types.rs  util.rs
scripts/: coverage.sh
src/: alloc_util.rs  canonical.rs  codec.rs  decode.rs  edit.rs  encode.rs  error.rs  float.rs  int.rs  lib.rs  limits.rs  macros.rs  order.rs  parse.rs  profile.rs  query.rs  scalar.rs  scanner.rs  serde_impl.rs  stream.rs  utf8.rs  value.rs  walk.rs  wire.rs
tests/: canonical_api.rs  cbor_macro.rs  core.rs  derive_encode_order.rs  edit.rs  encode_vectors.rs  invariants.rs  proptests.rs  query.rs  query_alloc.rs  serde_profile.rs  serde_value.rs  validation_vectors.rs  value_constructors.rs
